--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+    />
     <link rel="icon" type="image/svg+xml" href="/homease_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homease</title>
